[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "file_utils",
    "day_1",
    "day_2",
    "day_3",
    "day_4",
    "day_5",
    "day_6",
    "day_7",
    "day_8",
    "day_9",
    "day_10",
    "day_11",
]

default-members = [
    "day_11"
]
